Druga promena Repos1

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <script src="main.js" charset="utf-8"></script>
 </head>
 <body>
-<h1>Repos1 prva promena</h1>
+<h1>Repos1 druga promena </h1>
 </body>
 </html>
